k8s/client-react/react.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-react-deploy
  labels:
    app: client-react
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client-react
  template:
    metadata:
      labels:
        app: client-react
    spec:
      containers:
      - name: client-react
        image: bosukeme/client-react-k8s:latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "500Mi"
            cpu: "1000m"
          limits:
            memory: "500Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
          protocol: TCP 
        readinessProbe:
          httpGet:
            path: /
            port: 80
        securityContext:
          allowPrivilegeEscalation: false
          privileged: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
