k8s/client-react/react.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-react-svc
  labels:
    app: client-react
spec:
  selector:
    app: client-react
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
