k8s/client-react/react.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-react-ingress
  labels:
    app: client-react
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Origin, X-Requested-With, Content-Type, Accept, Authorization"
spec:
  rules:
  - host: client-react.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-react-svc
            port: 
              number: 80
